# bin-deps-wasm

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
wasm-module/: Cargo.toml
